Header photo distortion fixed

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -274,3 +274,8 @@
         width: 35%;
     }
 }
+
+/* Header image */
+.preview img {
+    height: auto;
+}
